# projecteuler

./: Cargo.toml  LICENSE  Makefile  README.md  check.py  run-all.sh
p1/src/: main.rs
p10/: Cargo.toml
p10/src/: main.rs
p11/src/: main.rs
p12/src/: main.rs
p13/: Cargo.toml
p13/src/: main.rs
p14/src/: main.rs
p15/: Cargo.toml
p15/src/: main.rs
p16/: Cargo.toml
p16/src/: main.rs
p17/src/: main.rs
p18/: Cargo.toml
p18/src/: main.rs
p19/: Cargo.toml
p19/src/: main.rs
p2/: Cargo.toml
p2/src/: main.rs
p20/: Cargo.toml
p20/benches/: main.rs
p20/src/: main.rs
p21/: Cargo.toml
p21/src/: main.rs
p22/src/: main.rs
p23/: Cargo.toml
p23/src/: main.rs
p24/: Cargo.toml
p24/src/: main.rs
p25/: Cargo.toml
p25/src/: main.rs
p26/: Cargo.toml
p26/src/: main.rs
p27/: Cargo.toml
p27/src/: main.rs
p28/: Cargo.toml  build.rs
p28/src/: main.c  main.rs  slow_main.rs
p29/: Cargo.toml
p29/src/: main.rs
p3/: Cargo.toml
p3/src/: main.rs
p30/: Cargo.toml
p30/src/: main.rs
p31/: Cargo.toml
p31/src/: main.rs
p32/src/: main.rs
p4/: Cargo.toml
p4/src/: main.rs
p5/: Cargo.toml
p5/src/: main.rs
p6/: Cargo.toml
p6/src/: main.rs
p7/: Cargo.toml
p7/src/: main.rs
p8/: Cargo.toml
p8/src/: main.rs
p9/: Cargo.toml
p9/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
