cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [ 
    "p1", "p10",
    "p11",
    "p12",
    "p13",
    "p14",
    "p15",
    "p16",
    "p17", "p18", "p19", "p2", "p20", "p21", "p22", "p23", "p24", "p25", "p26", "p27", "p28", "p29", "p3", "p30", "p31", "p32", "p4", "p5",
    "p6", "p7", "p8", "p9", 
    "utils",
]

[profile.release]
lto = false

[profile.dev]
codegen-backend = "cranelift"